= Sombrero


== v0.4.0    2016-02-06

== v0.3.2    2012-03-18

* [new] TagType.
* [new] Alias for tag (still on the way).
* [bug] lib/model/photo.rb: in Photo#add_tags.
* [change] ppost.rb: add --log option. show statistics. v0.3.2.
* [new] lib/plogger.rb
* [change] photo_registrar.rb: Support URL with query string.
* [change] pcrawl.rb v0.4.1. Show statistics.
* [change] 'already exist' page.

== v0.3.1    2010-08-31

* [bug] ppost.rb v0.3.1. Using yaml file.
* [bug] Showing photo with md5.

== v0.3.0    2010-08-29

* [new] Tagging to photos.

== v0.2.3    2010-06-05

== v0.2.2    2010-06-05

== v0.2.1    2010-05-22

== v0.2.0    2010-05-15
