@@ -1,5 +1,8 @@
 = Sombrero
 
+== HEAD
+
+* [change] bin/statistics.rb: update.
 
 == v0.4.0    2016-02-06
 
